Removed update from OAS3 spec.
