# doc/a3s-openapi.yaml
@@ -1677,63 +1677,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-    put:
-      tags:
-        - TermsOfService
-      summary: Update a terms of service entry.
-      description: Update a terms of service entry by its UUID.
-      operationId: updateTermsOfService
-      parameters:
-        - name: termsOfServiceId
-          in: path
-          description: The UUID of the terms of service entry.
-          required: true
-          schema:
-            $ref: '#/components/schemas/TermsOfServiceId'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/TermsOfServiceSubmit'
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TermsOfService'
-        '204':
-          description: No Content.
-        '400':
-          description: Bad Request.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Not authenticated.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '403':
-          description: Forbidden - You are not authorized to update the terms of service entry.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '404':
-          description: Terms of service entry not found.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: An unexpected error occurred.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
     delete:
       tags:
         - TermsOfService
